--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ---
 version: 0.07
-date:    
+date:    Fri Oct 26 18:18:06 PDT 2012
 changes:
 - Apply tobyink++'s https://github.com/ingydotnet/moos-pm/pull/7
 - Can has XS accessors now
