--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.16
+date:    Thu Jun 19 12:04:24 PDT 2014
+changes:
+- Move to Zilla-Dist
+---
 version: 0.15
 date:    Mon Nov 26 09:00:46 PST 2012
 changes:
