--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.22
+date:    Sat Aug  2 16:10:51 PDT 2014
+changes:
+- Fix Copyright years.
+---
 version: 0.21
 date:    Wed Jul 30 15:54:19 PDT 2014
 changes:
