--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.23
+date:    Sun Aug  3 23:27:27 PDT 2014
+changes:
+- Remove (c) from Copyright
+---
 version: 0.22
 date:    Sat Aug  2 16:10:51 PDT 2014
 changes:
