--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.29
+date:    Sat Aug 16 16:55:59 PDT 2014
+changes:
+- Change ' / ' to '/' in doc
+---
 version: 0.28
 date:    Sat Aug 16 11:41:39 PDT 2014
 changes:
