--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.30
+date:    Tue Aug 19 16:28:24 PDT 2014
+changes:
+- Replace tabs with spaces
+---
 version: 0.29
 date:    Sat Aug 16 16:55:59 PDT 2014
 changes:
